# ZiAPI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml
docs/: CONTRIBUTING.md  README.md
docs/examples/: DIRECTORY_LISTING.md  LOGGER.md  PHP_CGI.md  REDIRECTION.md
docs/general/: CONTRIBUTING.md  GETTING_STARTED.md  MODULES.md  STANDARDS.md  WHY_US.md
docs/guides/: CONFIG.md  IMPLEMENT_HANDLER.md  IMPLEMENT_NETWORK.md  IMPLEMENT_POSTPROCESSOR.md  IMPLEMENT_PREPROCESSOR.md  INSTALL_AND_BUILD.md  MODULES_101.md
examples/: Logger.cpp
examples/dylib/: Module.cpp
examples/modules/compressor/: CompressorModule.hpp
examples/modules/decompressor/: DecompressorModule.hpp
examples/modules/directory-listing/: DirectoryListingModule.hpp
examples/modules/logger/: LoggerModule.hpp
examples/modules/php-cgi/: Module.hpp
examples/modules/redirection/: Module.hpp
examples/utils/: MockConfig.hpp
include/: include.hpp
include/ZiAPI/: Api.hpp  Color.hpp  ExportSymbol.hpp  Http.hpp  IConfig.hpp  IModule.hpp  Logger.hpp  Utils.hpp
include/tools/: Color.hpp
include/ziapi/: Color.hpp  Config.hpp  Http.hpp  HttpConstants.hpp  IModule.hpp  Logger.hpp  Module.hpp  Version.hpp
include/ziapii/: IConfig.hpp  Logger.hpp
src/: main.cpp
tests/: Compressor.cpp  Config.cpp  Decompressor.cpp  IConfig.cpp  Logger.cpp  Module.cpp  Version.cpp  test.cpp
